Added test generator from native ref impl. Also ktfmt good